--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# OpenAIService configuration
 quarkus.langchain4j.chat-model.commercial.provider=openai
 quarkus.langchain4j.openai.commercial.api-key=${OPENAI_API_KEY}
 quarkus.langchain4j.openai.commercial.base-url=https://api.openai.com/v1/
@@ -5,12 +6,23 @@ quarkus.langchain4j.openai.commercial.chat-model.model-name=gpt-3.5-turbo-0125
 quarkus.langchain4j.openai.commercial.chat-model.temperature=0.0
 quarkus.langchain4j.openai.commercial.timeout=100s
 
+# openai standard configuration
 quarkus.langchain4j.openai.api-key=${OPENAI_API_KEY}
 quarkus.langchain4j.openai.base-url=https://api.openai.com/v1/
 
-
+# togetherai configuration
 quarkus.langchain4j.openai.opensource.api-key=${TOGETHERAI_API_KEY}
 quarkus.langchain4j.openai.opensource.base-url=https://api.together.xyz
 quarkus.langchain4j.openai.opensource.chat-model.model-name=togethercomputer/llama-2-70b-chat
 quarkus.langchain4j.openai.opensource.chat-model.temperature=0.0
 quarkus.langchain4j.openai.opensource.timeout=100s
+
+
+# configure your datasource
+quarkus.datasource.db-kind = postgresql
+quarkus.datasource.username = gibler
+quarkus.datasource.password = connormcgyver
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/thesis-db
+
+# drop and create the database at startup (use `update` to only update the schema)
+quarkus.hibernate-orm.database.generation = drop-and-create
