--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,7 @@ quarkus.datasource.password = connormcgyver
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/thesis-db
 
 # drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation = drop-and-create
+quarkus.hibernate-orm.database.generation = update
+
+# Config for RAG
+quarkus.langchain4j.pgvector.dimension=384
