reactive funktionen haben noch complikationen mit blocking und nonblocking

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ quarkus.langchain4j.openai.opensource.log-responses=true
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = gibler
 quarkus.datasource.password = connormcgyver
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/thesis-db
+quarkus.datasource.reactive.url = vertx-reactive:postgresql://localhost:5432/thesis-db
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation = drop-and-create
