upgrade auf quarkus-langchain4j version 0.8.3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Prompt configuration
+ai.system-prompt=Du bist Experte im deutschen Gesundheitswesen und in der Gesundheitsinformatik. Du Antwortest auf Fragen zu Gesundheit, Medizin und Informatik. Wenn du eine Antwort nicht weiﬂt, gib bitte 'Das weiﬂ ich leider nicht' als Antwort.
+
 # OpenAIService configuration
 quarkus.langchain4j.openai.commercial.api-key=${OPENAI_API_KEY}
 quarkus.langchain4j.openai.commercial.base-url=https://api.openai.com/v1/
