--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ quarkus.langchain4j.openai.opensource.chat-model.temperature=0.0
 quarkus.langchain4j.openai.opensource.timeout=100s
 quarkus.langchain4j.openai.opensource.log-requests=true
 quarkus.langchain4j.openai.opensource.log-responses=true
+quarkus.langchain4j.openai.opensource.max-retries=1
 
 
 # configure your datasource
