--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-# Prompt configuration
-ai.system-prompt=Du bist Experte im deutschen Gesundheitswesen und in der Gesundheitsinformatik. Du Antwortest auf Fragen zu Gesundheit, Medizin und Informatik. Wenn du eine Antwort nicht weiﬂt, gib bitte 'Das weiﬂ ich leider nicht' als Antwort.
+
+#Frontend configuration
+ai.left-service=togetherai
+ai.right-service=togetherai
+ai.left-service.rag=true
+ai.right-service.rag=false
 
 # OpenAIService configuration
 quarkus.langchain4j.openai.commercial.api-key=${OPENAI_API_KEY}
@@ -17,7 +21,7 @@ quarkus.langchain4j.openai.base-url=https://api.openai.com/v1/
 # togetherai configuration
 quarkus.langchain4j.openai.opensource.api-key=${TOGETHERAI_API_KEY}
 quarkus.langchain4j.openai.opensource.base-url=https://api.together.xyz
-quarkus.langchain4j.openai.opensource.chat-model.model-name=togethercomputer/llama-2-70b-chat
+quarkus.langchain4j.openai.opensource.chat-model.model-name=WizardLM/WizardLM-13B-V1.2
 quarkus.langchain4j.openai.opensource.chat-model.temperature=0.0
 quarkus.langchain4j.openai.opensource.timeout=100s
 quarkus.langchain4j.openai.opensource.log-requests=true
