--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 #Frontend configuration
-ai.left-service=togetherai
-ai.right-service=togetherai
+ai.left-service=openai
+ai.right-service=openai
 ai.left-service.rag=true
 ai.right-service.rag=false
 
 # OpenAIService configuration
-quarkus.langchain4j.openai.commercial.api-key=${OPENAI_API_KEY}
+quarkus.langchain4j.openai.commercial.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.commercial.base-url=https://api.openai.com/v1/
 quarkus.langchain4j.openai.commercial.chat-model.model-name=gpt-3.5-turbo-0125
 quarkus.langchain4j.openai.commercial.chat-model.temperature=0.0
@@ -15,7 +15,6 @@ quarkus.langchain4j.openai.commercial.log-requests=true
 quarkus.langchain4j.openai.commercial.log-responses=true
 
 # openai standard configuration
-quarkus.langchain4j.openai.api-key=${OPENAI_API_KEY}
 quarkus.langchain4j.openai.base-url=https://api.openai.com/v1/
 
 # togetherai configuration
@@ -40,3 +39,4 @@ quarkus.hibernate-orm.database.generation = drop-and-create
 
 # Config for RAG
 quarkus.langchain4j.pgvector.dimension=384
+quarkus.langchain4j.chat-memory.memory-window.max-messages=5
