query logikfehler gefixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #Frontend configuration
 ai.left-service=openai
-ai.right-service=openai
+ai.right-service=togetherai
 ai.left-service.rag=true
 ai.right-service.rag=false
 
@@ -20,7 +20,7 @@ quarkus.langchain4j.openai.base-url=https://api.openai.com/v1/
 # togetherai configuration
 quarkus.langchain4j.openai.opensource.api-key=${TOGETHERAI_API_KEY}
 quarkus.langchain4j.openai.opensource.base-url=https://api.together.xyz
-quarkus.langchain4j.openai.opensource.chat-model.model-name=WizardLM/WizardLM-13B-V1.2
+quarkus.langchain4j.openai.opensource.chat-model.model-name=Qwen/Qwen1.5-72B-Chat
 quarkus.langchain4j.openai.opensource.chat-model.temperature=0.0
 quarkus.langchain4j.openai.opensource.timeout=100s
 quarkus.langchain4j.openai.opensource.log-requests=true
