deployment fertig gemacht

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,12 +30,12 @@ quarkus.langchain4j.openai.opensource.max-retries=1
 
 # configure your datasource
 quarkus.datasource.db-kind = postgresql
-quarkus.datasource.username = gibler
-quarkus.datasource.password = connormcgyver
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/thesis-db
+quarkus.datasource.username = ${POSTGRES_USER}
+quarkus.datasource.password = ${POSTGRES_PASSWORD}
+quarkus.datasource.jdbc.url = ${QUARKUS_DATASOURCE_JDBC_URL}
 
 # drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation = update
+quarkus.hibernate-orm.database.generation = drop-and-create
 
 # Config for RAG
 quarkus.langchain4j.pgvector.dimension=384
