--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 #Frontend configuration
 ai.left-service=openai
 ai.right-service=togetherai
-ai.left-service.rag=true
-ai.right-service.rag=false
+ai.left-service.rag=false
+ai.right-service.rag=true
 
 # OpenAIService configuration
 quarkus.langchain4j.openai.commercial.api-key=${OPENAI_APIKEY}
@@ -20,7 +20,7 @@ quarkus.langchain4j.openai.base-url=https://api.openai.com/v1/
 # togetherai configuration
 quarkus.langchain4j.openai.opensource.api-key=${TOGETHERAI_API_KEY}
 quarkus.langchain4j.openai.opensource.base-url=https://api.together.xyz
-quarkus.langchain4j.openai.opensource.chat-model.model-name=Qwen/Qwen1.5-72B-Chat
+quarkus.langchain4j.openai.opensource.chat-model.model-name=meta-llama/Llama-2-70b-chat-hf
 quarkus.langchain4j.openai.opensource.chat-model.temperature=0.0
 quarkus.langchain4j.openai.opensource.timeout=100s
 quarkus.langchain4j.openai.opensource.log-requests=true
@@ -39,4 +39,4 @@ quarkus.hibernate-orm.database.generation = drop-and-create
 
 # Config for RAG
 quarkus.langchain4j.pgvector.dimension=384
-quarkus.langchain4j.chat-memory.memory-window.max-messages=5
+quarkus.langchain4j.chat-memory.memory-window.max-messages=3
