prompt in application.properties deklarierbar gemacht

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 #Frontend configuration
 ai.left-service=openai
 ai.right-service=togetherai
-ai.left-service.rag=false
-ai.right-service.rag=true
+ai.left-service.rag=true
+ai.right-service.rag=false
+ai.prompt=Du bist Experte im deutschen Gesundheitswesen und in der Gesundheitsinformatik. Du antwortest auf Fragen zu Gesundheit, Medizin und Informatik. Wenn du eine Antwort nicht weisst, gib bitte 'Das weiﬂ ich leider nicht' als Antwort. Antworte auf Deutsch.
 
 # OpenAIService configuration
 quarkus.langchain4j.openai.commercial.api-key=${OPENAI_APIKEY}
