--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
       - QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://quarkus-db:5432/thesis-db
       - OPENAI_APIKEY=${OPENAI_APIKEY}
       - TOGETHERAI_API_KEY=${TOGETHERAI_API_KEY}
+    volumes:
+      - ./pdf_storage:/resources/pdfs
     ports:
       - "8080:8080"
     depends_on:
