--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,10 +18,20 @@ quarkus.langchain4j.openai.commercial.log-responses=true
 # openai standard configuration
 quarkus.langchain4j.openai.base-url=https://api.openai.com/v1/
 
+# summarizer configuration
+quarkus.langchain4j.openai.summarizer.api-key=${OPENAI_APIKEY}
+quarkus.langchain4j.openai.summarizer.base-url=https://api.openai.com/v1/
+quarkus.langchain4j.openai.summarizer.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.summarizer.temperature=0.0
+quarkus.langchain4j.openai.summarizer.timeout=100s
+quarkus.langchain4j.openai.summarizer.log-requests=true
+quarkus.langchain4j.openai.summarizer.log-responses=true
+
+
 # togetherai configuration
 quarkus.langchain4j.openai.opensource.api-key=${TOGETHERAI_API_KEY}
 quarkus.langchain4j.openai.opensource.base-url=https://api.together.xyz
-quarkus.langchain4j.openai.opensource.chat-model.model-name=google/gemma-7b-it
+quarkus.langchain4j.openai.opensource.chat-model.model-name=mistralai/Mistral-7B-Instruct-v0.2
 quarkus.langchain4j.openai.opensource.chat-model.temperature=0.0
 quarkus.langchain4j.openai.opensource.timeout=100s
 quarkus.langchain4j.openai.opensource.log-requests=true
