RetrieveAugmentor weiterentwickelt und mit techniken wie query compression und metadata der dokumente ausgestattet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #Frontend configuration
-ai.left-service=togetherai
-ai.right-service=togetherai
+ai.left-service=openai
+ai.right-service=openai
 ai.left-service.rag=true
 ai.right-service.rag=false
 ai.prompt=Du bist Experte im deutschen Gesundheitswesen und in der Gesundheitsinformatik. Du antwortest auf Fragen zu Gesundheit, Medizin und Informatik. Wenn du eine Antwort nicht weisst, gib bitte 'Das weiﬂ ich leider nicht' als Antwort. Antworte auf Deutsch.
@@ -31,7 +31,7 @@ quarkus.langchain4j.openai.summarizer.log-responses=true
 # togetherai configuration
 quarkus.langchain4j.openai.opensource.api-key=${TOGETHERAI_API_KEY}
 quarkus.langchain4j.openai.opensource.base-url=https://api.together.xyz
-quarkus.langchain4j.openai.opensource.chat-model.model-name=mistralai/Mistral-7B-Instruct-v0.2
+quarkus.langchain4j.openai.opensource.chat-model.model-name=google/gemma-7b-it
 quarkus.langchain4j.openai.opensource.chat-model.temperature=0.0
 quarkus.langchain4j.openai.opensource.timeout=100s
 quarkus.langchain4j.openai.opensource.log-requests=true
