Anpassungen fürs deployment + Kommentare ergänzt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ quarkus.langchain4j.openai.commercial.log-responses=true
 
 # openai standard configuration
 quarkus.langchain4j.openai.base-url=https://api.openai.com/v1/
+quarkus.langchain4j.openai.api-key=${OPENAI_APIKEY}
 
 # summarizer configuration
 quarkus.langchain4j.openai.summarizer.api-key=${OPENAI_APIKEY}
