design angepasst + besseres opensource model gefunden mit nur 7b params

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #Frontend configuration
-ai.left-service=openai
+ai.left-service=togetherai
 ai.right-service=openai
 ai.left-service.rag=true
 ai.right-service.rag=false
@@ -23,7 +23,7 @@ quarkus.langchain4j.openai.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.summarizer.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.summarizer.base-url=https://api.openai.com/v1/
 quarkus.langchain4j.openai.summarizer.model-name=gpt-3.5-turbo-0125
-quarkus.langchain4j.openai.summarizer.temperature=0.0
+quarkus.langchain4j.openai.summarizer.temperature=0.7
 quarkus.langchain4j.openai.summarizer.timeout=100s
 quarkus.langchain4j.openai.summarizer.log-requests=true
 quarkus.langchain4j.openai.summarizer.log-responses=true
@@ -32,8 +32,8 @@ quarkus.langchain4j.openai.summarizer.log-responses=true
 # togetherai configuration
 quarkus.langchain4j.openai.opensource.api-key=${TOGETHERAI_API_KEY}
 quarkus.langchain4j.openai.opensource.base-url=https://api.together.xyz
-quarkus.langchain4j.openai.opensource.chat-model.model-name=google/gemma-7b-it
-quarkus.langchain4j.openai.opensource.chat-model.temperature=0.0
+quarkus.langchain4j.openai.opensource.chat-model.model-name=openchat/openchat-3.5-1210
+quarkus.langchain4j.openai.opensource.chat-model.temperature=0.7
 quarkus.langchain4j.openai.opensource.timeout=100s
 quarkus.langchain4j.openai.opensource.log-requests=true
 quarkus.langchain4j.openai.opensource.log-responses=true
@@ -47,7 +47,7 @@ quarkus.datasource.password = ${POSTGRES_PASSWORD}
 quarkus.datasource.jdbc.url = ${QUARKUS_DATASOURCE_JDBC_URL}
 
 # drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation = drop-and-create
+quarkus.hibernate-orm.database.generation = update
 %prod.quarkus.hibernate-orm.database.generation = none
 
 %prod.quarkus.hibernate-orm.sql-load-script = db/migration/Create_Trigger_for_FileUpload_Embedding_Delete.sql
