upload ui angepasst + docker-compose.yaml pdf-storage volumen angelegt

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - OPENAI_APIKEY=${OPENAI_APIKEY}
       - TOGETHERAI_API_KEY=${TOGETHERAI_API_KEY}
     volumes:
-      - ./pdf_storage:/resources/pdfs
+      - pdf_storage:/resources/pdfs
     ports:
       - "8080:8080"
     depends_on:
@@ -40,3 +40,4 @@ networks:
 
 volumes:
   postgres_vector_volume:
+  pdf_storage:
