--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,15 +19,11 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-        
-    - name: Clear Maven Cache
-      run: |
-        rm -rf ~/.m2
-    
+
     - name: Maven package with logging
       run: |
         chmod +x ./mvnw
-        ./mvnw -e -X -Dmaven.test.skip package
+        ./mvnw -Dmaven.test.skip package
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
@@ -35,4 +31,4 @@ jobs:
         context: .
         file: src/main/docker/Dockerfile.jvm
         push: true
-        tags: saschakiebler/thesis-chatbot
+        tags: saschakiebler/thesis-chatbot:latest
