--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,7 @@ jobs:
       with:
         context: .
         file: src/main/docker/Dockerfile.jvm
+        distribution: 'corretto'
+        java-version: '17'
         push: true
         tags: saschakiebler/thesis-chatbot:latest
