--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,9 @@ jobs:
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
     - name: Maven package with logging
+      with:
+        distribution: 'corretto'
+        java-version: '17'
       run: |
         chmod +x ./mvnw
         ./mvnw -Dmaven.test.skip package
@@ -30,7 +33,5 @@ jobs:
       with:
         context: .
         file: src/main/docker/Dockerfile.jvm
-        distribution: 'corretto'
-        java-version: '17'
         push: true
         tags: saschakiebler/thesis-chatbot:latest
