--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,13 +20,15 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-    - name: Maven package with logging
-      run: |
-        chmod +x ./mvnw
-        ./mvnw -Dmaven.test.skip package
+    - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
       with:
-        distribution: 'corretto'
         java-version: '17'
+        distribution: 'corretto'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B -Dmaven.test.skip package --file pom.xml
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
