--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
     </dependency>
 
     <dependency>
+      <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-cohere</artifactId>
+      <version>${langchain4j.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>io.quarkiverse.langchain4j</groupId>
       <artifactId>quarkus-langchain4j-openai</artifactId>
       <version>${quarkus-langchain4j.version}</version>
