darkmode geändert und Model geändert

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ quarkus.langchain4j.openai.summarizer.log-responses=true
 # togetherai configuration
 quarkus.langchain4j.openai.opensource.api-key=${TOGETHERAI_API_KEY}
 quarkus.langchain4j.openai.opensource.base-url=https://api.together.xyz
-quarkus.langchain4j.openai.opensource.chat-model.model-name=openchat/openchat-3.5-1210
+quarkus.langchain4j.openai.opensource.chat-model.model-name=NousResearch/Nous-Hermes-2-Mixtral-8x7B-DPO
 quarkus.langchain4j.openai.opensource.chat-model.temperature=0.7
 quarkus.langchain4j.openai.opensource.timeout=100s
 quarkus.langchain4j.openai.opensource.log-requests=true
@@ -47,8 +47,8 @@ quarkus.datasource.password = ${POSTGRES_PASSWORD}
 quarkus.datasource.jdbc.url = ${QUARKUS_DATASOURCE_JDBC_URL}
 
 # drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation = update
-%prod.quarkus.hibernate-orm.database.generation = none
+quarkus.hibernate-orm.database.generation = drop-and-create
+%prod.quarkus.hibernate-orm.database.generation = drop-and-create
 
 %prod.quarkus.hibernate-orm.sql-load-script = db/migration/Create_Trigger_for_FileUpload_Embedding_Delete.sql
 %dev.quarkus.hibernate-orm.sql-load-script = db/migration/Create_Trigger_for_FileUpload_Embedding_Delete.sql
