--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,11 @@ quarkus.hibernate-orm.database.generation = update
 # Config for RAG
 quarkus.langchain4j.pgvector.dimension=384
 quarkus.langchain4j.chat-memory.memory-window.max-messages=6
+
+
+# Multiple Choice Configuration
+quarkus.langchain4j.openai.multiple-choice.api-key=${OPENAI_APIKEY}
+quarkus.langchain4j.openai.multiple-choice.base-url=https://api.openai.com/v1/
+quarkus.langchain4j.openai.multiple-choice.model-name=gpt-4-turbo-preview
+quarkus.langchain4j.openai.multiple-choice.temperature=0.0
+quarkus.langchain4j.openai.multiple-choice.timeout=200s
