--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,7 +48,7 @@ quarkus.datasource.jdbc.url = ${QUARKUS_DATASOURCE_JDBC_URL}
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation = update
-%prod.quarkus.hibernate-orm.database.generation = update
+%prod.quarkus.hibernate-orm.database.generation = none
 
 %prod.quarkus.hibernate-orm.sql-load-script = db/migration/Create_Trigger_for_FileUpload_Embedding_Delete.sql
 %dev.quarkus.hibernate-orm.sql-load-script = db/migration/Create_Trigger_for_FileUpload_Embedding_Delete.sql
@@ -61,8 +61,9 @@ quarkus.langchain4j.chat-memory.memory-window.max-messages=6
 # Multiple Choice Configuration
 quarkus.langchain4j.openai.multiple-choice.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.multiple-choice.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.multiple-choice.chat-model.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.multiple-choice.chat-model.model-name=gpt-4-turbo-preview
 quarkus.langchain4j.openai.multiple-choice.chat-model.temperature=0.0
 quarkus.langchain4j.openai.multiple-choice.timeout=200s
 quarkus.langchain4j.openai.multiple-choice.log-requests=true
 quarkus.langchain4j.openai.multiple-choice.log-responses=true
+quarkus.langchain4j.openai.multiple-choice.chat-model.response-format=json_object
