--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,7 +61,7 @@ quarkus.langchain4j.chat-memory.memory-window.max-messages=6
 # Multiple Choice Configuration
 quarkus.langchain4j.openai.multiple-choice.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.multiple-choice.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.multiple-choice.chat-model.model-name=gpt-4-turbo-preview
+quarkus.langchain4j.openai.multiple-choice.chat-model.model-name=gpt-3.5-turbo-0125
 quarkus.langchain4j.openai.multiple-choice.chat-model.temperature=0.0
 quarkus.langchain4j.openai.multiple-choice.timeout=200s
 quarkus.langchain4j.openai.multiple-choice.log-requests=true
