langchain update auf 0.29.1 und quarkus-langchain auf 0.10.2 + RAG auf openai small embedding model umgestellt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-#Frontend configuration
+#Frontend configuration for chat
 ai.left-service=togetherai
 ai.right-service=openai
 ai.left-service.rag=true
@@ -47,15 +47,18 @@ quarkus.datasource.password = ${POSTGRES_PASSWORD}
 quarkus.datasource.jdbc.url = ${QUARKUS_DATASOURCE_JDBC_URL}
 
 # drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation = drop-and-create
+quarkus.hibernate-orm.database.generation = update
 %prod.quarkus.hibernate-orm.database.generation = drop-and-create
 
 %prod.quarkus.hibernate-orm.sql-load-script = db/migration/Create_Trigger_for_FileUpload_Embedding_Delete.sql
 %dev.quarkus.hibernate-orm.sql-load-script = db/migration/Create_Trigger_for_FileUpload_Embedding_Delete.sql
 
 # Config for RAG
-quarkus.langchain4j.pgvector.dimension=384
+quarkus.langchain4j.pgvector.dimension=1536
 quarkus.langchain4j.chat-memory.memory-window.max-messages=6
+quarkus.langchain4j.openai.embedding-model.enabled=true
+quarkus.langchain4j.openai.embedding-model.model-name=text-embedding-3-small
+rag.max-num-of-results=5
 
 
 # Multiple Choice Configuration
