fallbackmethode zu MultipleChoiceAIService hinzugefügt

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-fault-tolerance</artifactId>
+    </dependency>
+
+
   </dependencies>
   <build>
     <plugins>
