--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,7 +48,7 @@ quarkus.datasource.jdbc.url = ${QUARKUS_DATASOURCE_JDBC_URL}
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation = update
-%prod.quarkus.hibernate-orm.database.generation = drop-and-create
+%prod.quarkus.hibernate-orm.database.generation = update
 
 %prod.quarkus.hibernate-orm.sql-load-script = db/migration/Create_Trigger_for_FileUpload_Embedding_Delete.sql
 %dev.quarkus.hibernate-orm.sql-load-script = db/migration/Create_Trigger_for_FileUpload_Embedding_Delete.sql
@@ -64,7 +64,7 @@ quarkus.langchain4j.openai.embedding-model.model-name=text-embedding-3-small
 quarkus.langchain4j.openai.multiple-choice.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.multiple-choice.base-url=https://api.openai.com/v1/
 quarkus.langchain4j.openai.multiple-choice.chat-model.model-name=gpt-3.5-turbo-0125
-quarkus.langchain4j.openai.multiple-choice.chat-model.temperature=0.6
+quarkus.langchain4j.openai.multiple-choice.chat-model.temperature=0.0
 quarkus.langchain4j.openai.multiple-choice.timeout=300s
 quarkus.langchain4j.openai.multiple-choice.log-requests=true
 quarkus.langchain4j.openai.multiple-choice.log-responses=true
