--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,3 +69,23 @@ quarkus.langchain4j.openai.multiple-choice.timeout=300s
 quarkus.langchain4j.openai.multiple-choice.log-requests=true
 quarkus.langchain4j.openai.multiple-choice.log-responses=true
 quarkus.langchain4j.openai.multiple-choice.chat-model.response-format=json_object
+
+# QuizChain configuration
+
+# generate-the-quiz
+quarkus.langchain4j.openai.generate-the-quiz.api-key=${OPENAI_APIKEY}
+quarkus.langchain4j.openai.generate-the-quiz.base-url=https://api.openai.com/v1/
+quarkus.langchain4j.openai.generate-the-quiz.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.generate-the-quiz.temperature=0.0
+quarkus.langchain4j.openai.generate-the-quiz.timeout=100s
+quarkus.langchain4j.openai.generate-the-quiz.log-requests=true
+quarkus.langchain4j.openai.generate-the-quiz.log-responses=true
+
+# get-the-script
+quarkus.langchain4j.openai.get-the-script.api-key=${OPENAI_APIKEY}
+quarkus.langchain4j.openai.get-the-script.base-url=https://api.openai.com/v1/
+quarkus.langchain4j.openai.get-the-script.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.get-the-script.temperature=0.0
+quarkus.langchain4j.openai.get-the-script.timeout=100s
+quarkus.langchain4j.openai.get-the-script.log-requests=true
+quarkus.langchain4j.openai.get-the-script.log-responses=true
