Conversation läuft nach quiz weiter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -89,3 +89,12 @@ quarkus.langchain4j.openai.get-the-script.temperature=0.0
 quarkus.langchain4j.openai.get-the-script.timeout=100s
 quarkus.langchain4j.openai.get-the-script.log-requests=true
 quarkus.langchain4j.openai.get-the-script.log-responses=true
+
+# result-service
+quarkus.langchain4j.openai.result-service.api-key=${OPENAI_APIKEY}
+quarkus.langchain4j.openai.result-service.base-url=https://api.openai.com/v1/
+quarkus.langchain4j.openai.result-service.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.result-service.temperature=0.0
+quarkus.langchain4j.openai.result-service.timeout=100s
+quarkus.langchain4j.openai.result-service.log-requests=true
+quarkus.langchain4j.openai.result-service.log-responses=true
