Bei besprechung von Quiz werden nun vorschläge was der Nutzer fragen kann gemacht

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,14 +19,14 @@ quarkus.langchain4j.openai.commercial.log-responses=true
 quarkus.langchain4j.openai.base-url=https://api.openai.com/v1/
 quarkus.langchain4j.openai.api-key=${OPENAI_APIKEY}
 
-# summarizer configuration
-quarkus.langchain4j.openai.summarizer.api-key=${OPENAI_APIKEY}
-quarkus.langchain4j.openai.summarizer.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.summarizer.model-name=gpt-3.5-turbo-0125
-quarkus.langchain4j.openai.summarizer.temperature=0.7
-quarkus.langchain4j.openai.summarizer.timeout=100s
-quarkus.langchain4j.openai.summarizer.log-requests=true
-quarkus.langchain4j.openai.summarizer.log-responses=true
+# text-cleaner configuration
+quarkus.langchain4j.openai.text-cleaner.api-key=${OPENAI_APIKEY}
+quarkus.langchain4j.openai.text-cleaner.base-url=https://api.openai.com/v1/
+quarkus.langchain4j.openai.text-cleaner.model-name=gpt-4-turbo-preview
+quarkus.langchain4j.openai.text-cleaner.temperature=0.7
+quarkus.langchain4j.openai.text-cleaner.timeout=100s
+quarkus.langchain4j.openai.text-cleaner.log-requests=true
+quarkus.langchain4j.openai.text-cleaner.log-responses=true
 
 
 # togetherai configuration
@@ -77,7 +77,7 @@ quarkus.langchain4j.openai.generate-the-quiz.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.generate-the-quiz.base-url=https://api.openai.com/v1/
 quarkus.langchain4j.openai.generate-the-quiz.model-name=gpt-3.5-turbo-0125
 quarkus.langchain4j.openai.generate-the-quiz.temperature=0.0
-quarkus.langchain4j.openai.generate-the-quiz.timeout=100s
+quarkus.langchain4j.openai.generate-the-quiz.timeout=200s
 quarkus.langchain4j.openai.generate-the-quiz.log-requests=true
 quarkus.langchain4j.openai.generate-the-quiz.log-responses=true
 
@@ -94,7 +94,16 @@ quarkus.langchain4j.openai.get-the-script.log-responses=true
 quarkus.langchain4j.openai.result-service.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.result-service.base-url=https://api.openai.com/v1/
 quarkus.langchain4j.openai.result-service.model-name=gpt-3.5-turbo-0125
-quarkus.langchain4j.openai.result-service.temperature=0.0
-quarkus.langchain4j.openai.result-service.timeout=100s
+quarkus.langchain4j.openai.result-service.temperature=0.5
+quarkus.langchain4j.openai.result-service.timeout=200s
 quarkus.langchain4j.openai.result-service.log-requests=true
 quarkus.langchain4j.openai.result-service.log-responses=true
+
+# possible-questions
+quarkus.langchain4j.openai.possible-questions.api-key=${OPENAI_APIKEY}
+quarkus.langchain4j.openai.possible-questions.base-url=https://api.openai.com/v1/
+quarkus.langchain4j.openai.possible-questions.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.possible-questions.temperature=0.6
+quarkus.langchain4j.openai.possible-questions.timeout=100s
+quarkus.langchain4j.openai.possible-questions.log-requests=true
+quarkus.langchain4j.openai.possible-questions.log-responses=true
