--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,17 +75,19 @@ quarkus.langchain4j.openai.multiple-choice.chat-model.response-format=json_objec
 # generate-the-quiz
 quarkus.langchain4j.openai.generate-the-quiz.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.generate-the-quiz.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.generate-the-quiz.model-name=gpt-3.5-turbo-0125
-quarkus.langchain4j.openai.generate-the-quiz.temperature=0.0
+quarkus.langchain4j.openai.generate-the-quiz.chat-model.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.generate-the-quiz.chat-model.temperature=0.2
 quarkus.langchain4j.openai.generate-the-quiz.timeout=200s
 quarkus.langchain4j.openai.generate-the-quiz.log-requests=true
 quarkus.langchain4j.openai.generate-the-quiz.log-responses=true
+quarkus.langchain4j.openai.generate-the-quiz.chat-model.response-format=json_object
+
 
 # get-the-script
 quarkus.langchain4j.openai.get-the-script.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.get-the-script.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.get-the-script.model-name=gpt-3.5-turbo-0125
-quarkus.langchain4j.openai.get-the-script.temperature=0.0
+quarkus.langchain4j.openai.get-the-script.chat-model.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.get-the-script.chat-model.temperature=0.0
 quarkus.langchain4j.openai.get-the-script.timeout=100s
 quarkus.langchain4j.openai.get-the-script.log-requests=true
 quarkus.langchain4j.openai.get-the-script.log-responses=true
@@ -93,8 +95,8 @@ quarkus.langchain4j.openai.get-the-script.log-responses=true
 # result-service
 quarkus.langchain4j.openai.result-service.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.result-service.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.result-service.model-name=gpt-3.5-turbo-0125
-quarkus.langchain4j.openai.result-service.temperature=0.5
+quarkus.langchain4j.openai.result-service.chat-model.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.result-service.chat-model.temperature=0.5
 quarkus.langchain4j.openai.result-service.timeout=200s
 quarkus.langchain4j.openai.result-service.log-requests=true
 quarkus.langchain4j.openai.result-service.log-responses=true
@@ -102,8 +104,8 @@ quarkus.langchain4j.openai.result-service.log-responses=true
 # possible-questions
 quarkus.langchain4j.openai.possible-questions.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.possible-questions.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.possible-questions.model-name=gpt-3.5-turbo-0125
-quarkus.langchain4j.openai.possible-questions.temperature=0.6
+quarkus.langchain4j.openai.possible-questions.chat-model.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.possible-questions.chat-model.temperature=0.6
 quarkus.langchain4j.openai.possible-questions.timeout=100s
 quarkus.langchain4j.openai.possible-questions.log-requests=true
 quarkus.langchain4j.openai.possible-questions.log-responses=true
