QuizChain erweitert mit classifier um Nutzer input an den richtigen Service zu senden

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -109,3 +109,21 @@ quarkus.langchain4j.openai.possible-questions.chat-model.temperature=0.6
 quarkus.langchain4j.openai.possible-questions.timeout=100s
 quarkus.langchain4j.openai.possible-questions.log-requests=true
 quarkus.langchain4j.openai.possible-questions.log-responses=true
+
+# web-scraper
+quarkus.langchain4j.openai.web-scraper.api-key=${OPENAI_APIKEY}
+quarkus.langchain4j.openai.web-scraper.base-url=https://api.openai.com/v1/
+quarkus.langchain4j.openai.web-scraper.chat-model.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.web-scraper.chat-model.temperature=0.0
+quarkus.langchain4j.openai.web-scraper.timeout=100s
+quarkus.langchain4j.openai.web-scraper.log-requests=true
+quarkus.langchain4j.openai.web-scraper.log-responses=true
+
+# normal-chat
+quarkus.langchain4j.openai.normal-chat.api-key=${OPENAI_APIKEY}
+quarkus.langchain4j.openai.normal-chat.base-url=https://api.openai.com/v1/
+quarkus.langchain4j.openai.normal-chat.chat-model.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.normal-chat.chat-model.temperature=0.0
+quarkus.langchain4j.openai.normal-chat.timeout=100s
+quarkus.langchain4j.openai.normal-chat.log-requests=true
+quarkus.langchain4j.openai.normal-chat.log-responses=true
