Classifier geändert zu KI Model da probleme mit Embedding classifier

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -127,3 +127,13 @@ quarkus.langchain4j.openai.normal-chat.chat-model.temperature=0.0
 quarkus.langchain4j.openai.normal-chat.timeout=100s
 quarkus.langchain4j.openai.normal-chat.log-requests=true
 quarkus.langchain4j.openai.normal-chat.log-responses=true
+
+
+# input-classifier
+quarkus.langchain4j.openai.input-classifier.api-key=${OPENAI_APIKEY}
+quarkus.langchain4j.openai.input-classifier.base-url=https://api.openai.com/v1/
+quarkus.langchain4j.openai.input-classifier.chat-model.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.input-classifier.chat-model.temperature=0.0
+quarkus.langchain4j.openai.input-classifier.timeout=100s
+quarkus.langchain4j.openai.input-classifier.log-requests=true
+quarkus.langchain4j.openai.input-classifier.log-responses=true
