quarkus langchain auf 10.4 geupdated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,7 +55,7 @@ quarkus.hibernate-orm.database.generation = update
 
 # Config for RAG
 quarkus.langchain4j.pgvector.dimension=1536
-quarkus.langchain4j.chat-memory.memory-window.max-messages=6
+quarkus.langchain4j.chat-memory.memory-window.max-messages=15
 quarkus.langchain4j.openai.embedding-model.enabled=true
 quarkus.langchain4j.openai.embedding-model.model-name=text-embedding-3-small
 
@@ -70,7 +70,7 @@ quarkus.langchain4j.openai.multiple-choice.log-requests=true
 quarkus.langchain4j.openai.multiple-choice.log-responses=true
 quarkus.langchain4j.openai.multiple-choice.chat-model.response-format=json_object
 
-# QuizChain configuration
+## QuizChain configuration
 
 # generate-the-quiz
 quarkus.langchain4j.openai.generate-the-quiz.api-key=${OPENAI_APIKEY}
