--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -120,10 +120,10 @@ quarkus.langchain4j.openai.web-scraper.log-requests=true
 quarkus.langchain4j.openai.web-scraper.log-responses=true
 
 # normal-chat
-quarkus.langchain4j.openai.normal-chat.api-key=${OPENAI_APIKEY}
-quarkus.langchain4j.openai.normal-chat.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.normal-chat.chat-model.model-name=gpt-3.5-turbo-0125
-quarkus.langchain4j.openai.normal-chat.chat-model.temperature=0.0
+quarkus.langchain4j.openai.normal-chat.api-key=${TOGETHERAI_API_KEY}
+quarkus.langchain4j.openai.normal-chat.base-url=https://api.together.xyz
+quarkus.langchain4j.openai.normal-chat.chat-model.model-name=mistralai/Mixtral-8x22B-Instruct-v0.1
+quarkus.langchain4j.openai.normal-chat.chat-model.temperature=0.5
 quarkus.langchain4j.openai.normal-chat.timeout=100s
 quarkus.langchain4j.openai.normal-chat.log-requests=true
 quarkus.langchain4j.openai.normal-chat.log-responses=true
