Input text und Quiz werden nun belegter Vorlesung zugeordnet -> Vorbereitung auf Skill Diagramm des Nutzers + Anpassen des Quiz an Skill-Level des Nutzers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -137,3 +137,13 @@ quarkus.langchain4j.openai.input-classifier.chat-model.temperature=0.0
 quarkus.langchain4j.openai.input-classifier.timeout=100s
 quarkus.langchain4j.openai.input-classifier.log-requests=true
 quarkus.langchain4j.openai.input-classifier.log-responses=true
+
+
+# lecture-classifier
+quarkus.langchain4j.openai.lecture-classifier.api-key=${TOGETHERAI_API_KEY}
+quarkus.langchain4j.openai.lecture-classifier.base-url=https://api.together.xyz
+quarkus.langchain4j.openai.lecture-classifier.chat-model.model-name=meta-llama/Llama-3-8b-chat-hf
+quarkus.langchain4j.openai.lecture-classifier.chat-model.temperature=0.0
+quarkus.langchain4j.openai.lecture-classifier.timeout=100s
+quarkus.langchain4j.openai.lecture-classifier.log-requests=true
+quarkus.langchain4j.openai.lecture-classifier.log-responses=true
