--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,15 +60,6 @@ quarkus.langchain4j.openai.embedding-model.enabled=true
 quarkus.langchain4j.openai.embedding-model.model-name=text-embedding-3-small
 
 
-# Multiple Choice Configuration
-quarkus.langchain4j.openai.multiple-choice.api-key=${OPENAI_APIKEY}
-quarkus.langchain4j.openai.multiple-choice.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.multiple-choice.chat-model.model-name=gpt-3.5-turbo-0125
-quarkus.langchain4j.openai.multiple-choice.chat-model.temperature=0.0
-quarkus.langchain4j.openai.multiple-choice.timeout=300s
-quarkus.langchain4j.openai.multiple-choice.log-requests=true
-quarkus.langchain4j.openai.multiple-choice.log-responses=true
-quarkus.langchain4j.openai.multiple-choice.chat-model.response-format=json_object
 
 ## QuizChain configuration
 
@@ -102,10 +93,10 @@ quarkus.langchain4j.openai.result-service.log-requests=true
 quarkus.langchain4j.openai.result-service.log-responses=true
 
 # possible-questions
-quarkus.langchain4j.openai.possible-questions.api-key=${OPENAI_APIKEY}
-quarkus.langchain4j.openai.possible-questions.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.possible-questions.chat-model.model-name=gpt-3.5-turbo-0125
-quarkus.langchain4j.openai.possible-questions.chat-model.temperature=0.6
+quarkus.langchain4j.openai.possible-questions.api-key=${TOGETHERAI_API_KEY}
+quarkus.langchain4j.openai.possible-questions.base-url=https://api.together.xyz
+quarkus.langchain4j.openai.possible-questions.chat-model.model-name=meta-llama/Llama-3-70b-chat-hf
+quarkus.langchain4j.openai.possible-questions.chat-model.temperature=0.0
 quarkus.langchain4j.openai.possible-questions.timeout=100s
 quarkus.langchain4j.openai.possible-questions.log-requests=true
 quarkus.langchain4j.openai.possible-questions.log-responses=true
@@ -122,7 +113,7 @@ quarkus.langchain4j.openai.web-scraper.log-responses=true
 # normal-chat
 quarkus.langchain4j.openai.normal-chat.api-key=${TOGETHERAI_API_KEY}
 quarkus.langchain4j.openai.normal-chat.base-url=https://api.together.xyz
-quarkus.langchain4j.openai.normal-chat.chat-model.model-name=mistralai/Mixtral-8x22B-Instruct-v0.1
+quarkus.langchain4j.openai.normal-chat.chat-model.model-name=meta-llama/Llama-3-70b-chat-hf
 quarkus.langchain4j.openai.normal-chat.chat-model.temperature=0.5
 quarkus.langchain4j.openai.normal-chat.timeout=100s
 quarkus.langchain4j.openai.normal-chat.log-requests=true
@@ -130,9 +121,9 @@ quarkus.langchain4j.openai.normal-chat.log-responses=true
 
 
 # input-classifier
-quarkus.langchain4j.openai.input-classifier.api-key=${OPENAI_APIKEY}
-quarkus.langchain4j.openai.input-classifier.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.input-classifier.chat-model.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.input-classifier.api-key=${TOGETHERAI_API_KEY}
+quarkus.langchain4j.openai.input-classifier.base-url=https://api.together.xyz
+quarkus.langchain4j.openai.input-classifier.chat-model.model-name=meta-llama/Llama-3-70b-chat-hf
 quarkus.langchain4j.openai.input-classifier.chat-model.temperature=0.0
 quarkus.langchain4j.openai.input-classifier.timeout=100s
 quarkus.langchain4j.openai.input-classifier.log-requests=true
