Transaktion timeout erhöht bei Quizchain und auf gpt 4 für quiz gewechselt da Quizqualität von 3.5 schlecht

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-#Frontend configuration for chat
+# configuration for chat
 ai.left-service=togetherai
 ai.right-service=openai
 ai.left-service.rag=true
@@ -66,8 +66,8 @@ quarkus.langchain4j.openai.embedding-model.model-name=text-embedding-3-small
 # generate-the-quiz
 quarkus.langchain4j.openai.generate-the-quiz.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.generate-the-quiz.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.generate-the-quiz.chat-model.model-name=gpt-3.5-turbo-0125
-quarkus.langchain4j.openai.generate-the-quiz.chat-model.temperature=0.2
+quarkus.langchain4j.openai.generate-the-quiz.chat-model.model-name=gpt-4-turbo
+quarkus.langchain4j.openai.generate-the-quiz.chat-model.temperature=0.6
 quarkus.langchain4j.openai.generate-the-quiz.timeout=200s
 quarkus.langchain4j.openai.generate-the-quiz.log-requests=true
 quarkus.langchain4j.openai.generate-the-quiz.log-responses=true
