--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
 # configuration for chat
-ai.left-service=togetherai
+ai.left-service=openai
 ai.right-service=openai
 ai.left-service.rag=true
 ai.right-service.rag=false
-ai.prompt=Du bist Experte im deutschen Gesundheitswesen und in der Gesundheitsinformatik. Du antwortest auf Fragen zu Gesundheit, Medizin und Informatik. Wenn du eine Antwort nicht weisst, gib bitte 'Das weiﬂ ich leider nicht' als Antwort. Antworte auf Deutsch.
+ai.prompt=Du bist Experte im deutschen Gesundheitswesen und in der Gesundheitsinformatik. Du antwortest auf Fragen zu Gesundheit, Medizin und Informatik. Wenn du eine Antwort nicht kennst, gib bitte 'Das weiﬂ ich leider nicht' als Antwort. Antworte auf Deutsch.
 
 # OpenAIService configuration
 quarkus.langchain4j.openai.commercial.api-key=${OPENAI_APIKEY}
@@ -30,18 +30,6 @@ quarkus.langchain4j.openai.opensource.max-retries=3
 quarkus.langchain4j.openai.base-url=https://api.openai.com/v1/
 quarkus.langchain4j.openai.api-key=${OPENAI_APIKEY}
 
-# text-cleaner configuration
-quarkus.langchain4j.openai.text-cleaner.api-key=${OPENAI_APIKEY}
-quarkus.langchain4j.openai.text-cleaner.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.text-cleaner.model-name=gpt-4-turbo-preview
-quarkus.langchain4j.openai.text-cleaner.temperature=0.7
-quarkus.langchain4j.openai.text-cleaner.timeout=100s
-quarkus.langchain4j.openai.text-cleaner.log-requests=true
-quarkus.langchain4j.openai.text-cleaner.log-responses=true
-
-
-
-
 
 # configure your datasource
 quarkus.datasource.db-kind = postgresql
@@ -53,6 +41,7 @@ quarkus.datasource.jdbc.url = ${QUARKUS_DATASOURCE_JDBC_URL}
 quarkus.hibernate-orm.database.generation = update
 %prod.quarkus.hibernate-orm.database.generation = update
 
+# load the sql script at startup (creates trigger to delete embeddings when a file is deleted)
 %prod.quarkus.hibernate-orm.sql-load-script = db/migration/Create_Trigger_for_FileUpload_Embedding_Delete.sql
 %dev.quarkus.hibernate-orm.sql-load-script = db/migration/Create_Trigger_for_FileUpload_Embedding_Delete.sql
 
