--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ quarkus.datasource.password = ${POSTGRES_PASSWORD}
 quarkus.datasource.jdbc.url = ${QUARKUS_DATASOURCE_JDBC_URL}
 
 # drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation = update
+quarkus.hibernate-orm.database.generation = drop-and-create
 %prod.quarkus.hibernate-orm.database.generation = update
 
 # load the sql script at startup (creates trigger to delete embeddings when a file is deleted)
