--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,7 @@ quarkus.datasource.jdbc.url = ${QUARKUS_DATASOURCE_JDBC_URL}
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation = update
-%prod.quarkus.hibernate-orm.database.generation = drop-and-create
+%prod.quarkus.hibernate-orm.database.generation = update
 
 # load the sql script at startup (creates trigger to delete embeddings when a file is deleted)
 %prod.quarkus.hibernate-orm.sql-load-script = db/migration/Create_Trigger_for_FileUpload_Embedding_Delete.sql
