--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ ai.prompt=Du bist Experte im deutschen Gesundheitswesen und in der Gesundheitsin
 # OpenAIService configuration
 quarkus.langchain4j.openai.commercial.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.commercial.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.commercial.chat-model.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.commercial.chat-model.model-name=gpt-4o
 quarkus.langchain4j.openai.commercial.chat-model.temperature=0.7
 quarkus.langchain4j.openai.commercial.timeout=100s
 quarkus.langchain4j.openai.commercial.log-requests=true
