--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ ai.left-service=openai
 ai.right-service=openai
 ai.left-service.rag=true
 ai.right-service.rag=false
-ai.prompt=Du bist Experte im deutschen Gesundheitswesen und in der Gesundheitsinformatik. Du antwortest auf Fragen zu Gesundheit, Medizin und Informatik. Wenn du eine Antwort nicht kennst, gib bitte 'Das weiﬂ ich leider nicht' als Antwort. Antworte auf Deutsch.
+ai.prompt=Du bist Experte im deutschen Gesundheitswesen und in der Gesundheitsinformatik. Du antwortest auf Fragen zu Gesundheit, Medizin und Informatik. Wenn du eine Antwort nicht kennst, gib bitte 'Das wei√ü ich leider nicht' als Antwort. Antworte auf Deutsch.
 
 # OpenAIService configuration
 quarkus.langchain4j.openai.commercial.api-key=${OPENAI_APIKEY}
@@ -58,7 +58,7 @@ quarkus.langchain4j.openai.embedding-model.model-name=text-embedding-3-small
 # generate-the-quiz
 quarkus.langchain4j.openai.generate-the-quiz.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.generate-the-quiz.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.generate-the-quiz.chat-model.model-name=gpt-4-turbo
+quarkus.langchain4j.openai.generate-the-quiz.chat-model.model-name=gpt-4o-mini
 quarkus.langchain4j.openai.generate-the-quiz.chat-model.temperature=0.6
 quarkus.langchain4j.openai.generate-the-quiz.timeout=200s
 quarkus.langchain4j.openai.generate-the-quiz.log-requests=true
@@ -69,7 +69,7 @@ quarkus.langchain4j.openai.generate-the-quiz.chat-model.response-format=json_obj
 # get-the-script
 quarkus.langchain4j.openai.get-the-script.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.get-the-script.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.get-the-script.chat-model.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.get-the-script.chat-model.model-name=gpt-4o-mini
 quarkus.langchain4j.openai.get-the-script.chat-model.temperature=0.0
 quarkus.langchain4j.openai.get-the-script.timeout=100s
 quarkus.langchain4j.openai.get-the-script.log-requests=true
@@ -78,7 +78,7 @@ quarkus.langchain4j.openai.get-the-script.log-responses=true
 # result-service
 quarkus.langchain4j.openai.result-service.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.result-service.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.result-service.chat-model.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.result-service.chat-model.model-name=gpt-4o-mini
 quarkus.langchain4j.openai.result-service.chat-model.temperature=0.5
 quarkus.langchain4j.openai.result-service.timeout=200s
 quarkus.langchain4j.openai.result-service.log-requests=true
@@ -96,7 +96,7 @@ quarkus.langchain4j.openai.possible-questions.log-responses=true
 # web-scraper
 quarkus.langchain4j.openai.web-scraper.api-key=${OPENAI_APIKEY}
 quarkus.langchain4j.openai.web-scraper.base-url=https://api.openai.com/v1/
-quarkus.langchain4j.openai.web-scraper.chat-model.model-name=gpt-3.5-turbo-0125
+quarkus.langchain4j.openai.web-scraper.chat-model.model-name=gpt-4o-mini
 quarkus.langchain4j.openai.web-scraper.chat-model.temperature=0.0
 quarkus.langchain4j.openai.web-scraper.timeout=100s
 quarkus.langchain4j.openai.web-scraper.log-requests=true
